<resources>
    <string name="app_name">MovieMate</string>
    <string name="default_web_client_id">911594189329-jkujn8ejiec5ho371p1mlvers0eoa4qa.apps.googleusercontent.com</string>
    <string name="payment_title">Payment</string>
    <string name="logo_of_payment_method">Logo of payment method</string>
    <string name="payment">Payment</string>
    <string name="payment_method">Payment Method</string>
    <string name="pay">Pay</string>
    <string name="total">Total</string>
    <string name="apply">Apply</string>
    <string name="discount_code">Discount code</string>
    <string name="order_id">Order ID</string>
    <string name="seat">Seat</string>
    <string name="complete_your_payment_in">Complete your payment in</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="back_button">Back button</string>
    <string name="sign_in">Sign in</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="or_continue_with">Or continue with</string>
    <string name="don_t_have_an_account_register">Don\'t have an account? Register</string>
    <string name="notice_need_read_terms">By sign in or sign up, you agree to our Terms of Service and Privacy Policy</string>
    <string name="welcome">Welcome</string>
    <string name="forgot_password_title">Forgot password</string>
    <string name="reset_password">Reset password</string>
    <string name="reset_password_inform">Please enter your email and we will send an link in the next step to reset your password.</string>
    <string name="continue_string">Continue</string>
    <string name="error_icon">Error Icon</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm your password</string>
    <string name="already_have_an_account">Already have an account? Login</string>
    <string name="vnd">VND</string>
    <string name="search_movies">Search Movies...</string>
    <string name="welcome_back">Welcome back</string>
    <string name="now_playing">Now Playing</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="search">Search</string>
    <string name="clear">Clear</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="profile">Profile</string>
    <string name="edit">Edit ⟩</string>
    <string name="user_avatar">User Avatar</string>
    <string name="your_name">Your Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="save">Save</string>
    <string name="select_date_time">Select Date Time</string>
    <string name="available">Available</string>
    <string name="reserved">Reserved</string>
    <string name="selected">Selected</string>
    <string name="buy_ticket">Buy Ticket</string>
    <string name="complete_in">Complete in</string>
    <string name="change_password">Change password</string>
    <string name="enter_your_current_password">Enter your current password</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="re_enter_new_password">Re-enter new password</string>
    <string name="not_set_yet">Not set yet</string>
    <string name="continueStr">Continue</string>
    <string name="movie_detail">Movie Detail</string>
    <string name="time">Time:</string>
    <string name="language">Language:</string>
    <string name="rating">Rating:</string>
    <string name="movie_genre">Movie genre:</string>
    <string name="storyline">Storyline</string>
    <string name="director">Director</string>
    <string name="actor">Actor</string>
    <string name="cinema">Cinema</string>
    <string name="hi_user">Hi, User</string>
    <string name="movies">Movies</string>
    <string name="users">Users</string>
    <string name="statistic">Statistic</string>
    <string name="admin">Admin</string>
    <string name="home">Home</string>
    <string name="ticket">Ticket</string>
    <string name="movie">Movie</string>

    <string-array name="statistic_types">
        <item>Weekly Statistics</item>
        <item>Monthly Statistics</item>
        <item>Yearly Statistics</item>
    </string-array>

    <string-array name="movie_status">
        <item>Now Playing</item>
        <item>Coming Soon</item>
    </string-array>

    <string name="total_users">Total Users</string>
    <string name="active_users">Active Users</string>
    <string name="banned_users">Banned Users</string>
    <string name="banned">Banned</string>
    <string name="active">Active</string>
    <string name="tickets">Tickets</string>
    <string name="edit_movie">Edit Movie</string>
    <string name="genre">Genre</string>
    <string name="trailer_url">Trailer URL</string>
    <string name="add">+ Add</string>
    <string name="year">Year:</string>
    <string name="show_time">Show time</string>
    <string name="title">Title</string>
    <string name="change">Change</string>
    <string name="name">Name</string>
    <string name="price">Price:</string>
    <string name="status">Status:</string>
    <string name="show_time_duplicate_datetime_will_be_ignored">Show time (duplicate datetime will be ignored)</string>
    <string name="add_movie">Add Movie</string>
</resources>